@@ -5,4 +5,5 @@
 
 Version 1.1.0 to be released
 ----------------------------
-
+- New: Added CTimestampBehavior to automatically set timestamps in AR (Jonah)
+- New: Added CBaseMenu and CListMenu to aid in creating menus (Jonah)
